<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/tripName"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:hint="@string/trip_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/text_border"
        />

    <EditText
        android:id="@+id/tripDistance"
        android:layout_width="match_parent"
        android:inputType="number"
        android:singleLine="true"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:hint="@string/trip_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripName"
        android:background="@drawable/text_border"
        />

    <EditText
        android:id="@+id/tripDate"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:hint="@string/trip_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripDistance"
        android:background="@drawable/text_border"
        android:focusable="false"
        />

    <Button
        android:id="@+id/saveTripFormBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        />

    <Button
        android:id="@+id/cancelTripFormBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveTripFormBtn"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>